# tickerlake

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .radon.cfg  CLAUDE.md  Containerfile  Makefile  README.md  metadata.json  pyproject.toml  renovate.json
.github/workflows/: claude-code-review.yml  claude.yml  main.yml  tests.yml
container/: Containerfile  README.md  build.sh  metadata.yml  prepare_datasette.py  stage_analysis.db
examples/: test_gold_views.py  weinstein_buy_report.csv  weinstein_buy_report.html  weinstein_buy_report.md  weinstein_buy_report.py  weinstein_stage_chart.py  weinstein_watchlist.csv
src/tickerlake/: __init__.py  clients.py  config.py  delta_utils.py  logging_config.py  schemas.py  utils.py
src/tickerlake/bronze/: clean.py  clients.py  databento_client.py  main.py  models.py  postgres.py  schemas.py  splits.py  tickers.py  transformers.py  unified.py
src/tickerlake/db/: __init__.py  engine.py  operations.py  schema.py
src/tickerlake/gold/: __init__.py  hvc_concentration.py  hvc_returns.py  hvc_streak_breakers.py  hvc_streaks.py  hvcs.py  main.py  models.py  postgres.py  query.py  validate_hvcs.py  views.py  vwap_signals.py
src/tickerlake/silver/: aggregates.py  incremental.py  indicators.py  layer.py  main.py  models.py  postgres.py  splits.py  validation.py
src/tickerlake/storage/: __init__.py  checkpoints.py  operations.py  paths.py
src/tickerlake/utils/: __init__.py  batch_processing.py  calendar.py  dataframe.py  timestamps.py  validation.py
tests/: conftest.py  test_bronze_clients.py  test_bronze_download.py  test_bronze_main.py  test_bronze_schemas.py  test_bronze_splits.py  test_bronze_tickers.py  test_bronze_transformers.py  test_bronze_unified.py  test_config.py  test_gold_hvc_concentration.py  test_gold_hvc_returns.py  test_gold_hvc_streak_breakers.py  test_gold_hvc_streaks.py  test_gold_main.py  test_gold_stage_views.py  test_gold_validate_hvcs.py  test_silver_main.py  test_utils.py  test_weinstein_stage.py
